# gobject_learn

./: CMakeLists.txt  main.c
src/test1/: test1.c  test1.h
src/test2/: audio_decode.c  audio_decode.h  audio_sdl_render.c  audio_sdl_render.h  decode.c  decode.h  media_player.c  media_player.h  mp4_demux.c  mp4_demux.h  sdl_render.c  sdl_render.h  test2.c  test2.h  video_decode.c  video_decode.h
